--- a/GBriceCorp/src/main/webapp/static/css/app.css
+++ b/GBriceCorp/src/main/webapp/static/css/app.css
@@ -1,3 +1,5 @@
+
+
 body, #mainWrapper {
 	height: 70%;
 	background-color:rgb(245, 245, 245);
@@ -39,4 +41,51 @@ body, .form-control{
 
 .custom-width {
     width: 80px !important;
+}
+
+
+.custom-width {
+    width: 100% ;
+}
+
+.navbar {
+	align:center;
+	top: 0;
+	left: 0;
+	border-radius: 0;
+	position: float;
+	width: auto;
+	height: 100%;
+   background:rgba(200,200,200,0.5);
+   border:rgba(200,200,200,0.5);
+}
+
+#banniere{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 22%;
+}
+
+#flechemenu{
+	position: float;
+	margin-top: 200px;
+	margin-left: 0px;
+	height: 20px;
+}
+
+#logo{
+max-height: 150px;
+margin: 20px;
+}
+/* condition for screen size minimum of 500px */
+@media (max-width:1000px) {
+  /* your conditional / responsive CSS inside this condition */
+
+#logo{
+max-height: 75px;
+margin: 10px;
+}
+
 }
