--- a/GBriceCorp/src/main/webapp/static/css/app.css
+++ b/GBriceCorp/src/main/webapp/static/css/app.css
@@ -1,66 +1,80 @@
-
+body {
+	display: flex;
+}
 
 body, #mainWrapper {
 	height: 70%;
-	background-color:rgb(245, 245, 245);
+	background-color: rgb(245, 245, 245);
+
+}
+body, .form-control {
+	font-size: 12px !important;
+
 }
 
-body, .form-control{
-	font-size:12px!important;
-}
-
-.floatRight{
-	float:right;
+.floatRight {
+	float: right;
 	margin-right: 18px;
 }
 
-.has-error{
-	color:red;
+.has-error {
+	color: red;
 }
 
-.formcontainer{
+.formcontainer {
 	background-color: #DAE8E8;
 	padding: 20px;
 }
 
-.tablecontainer{
+.tablecontainer {
 	padding-left: 20px;
 }
 
 .generic-container {
-  width:80%;
-  margin-left: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 20px;
-  background-color: #EAE7E7;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  box-shadow: 0 0 30px black;
+	display: flex;
+flex-direction: column;
+	width: auto;
+	margin-left: 5vh;
+	margin-right: 5vh;
+	margin-top: 30vh;
+	margin-bottom: 5vh;
+	padding: 20px;
+	background-color: #EAE7E7;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	box-shadow: 0 0 30px black;
 }
 
 .custom-width {
-    width: 80px !important;
+	width: 80px !important;
 }
 
-
 .custom-width {
-    width: 100% ;
+	width: 100%;
+}
+
+.panel {
+	align: center;
+
+	width: auto;
+
 }
 
 .navbar {
-	align:center;
+
+	align: center;
 	top: 0;
 	left: 0;
 	border-radius: 0;
-	position: float;
+	display: flex;
 	width: auto;
-	height: 100%;
-   background:rgba(200,200,200,0.5);
-   border:rgba(200,200,200,0.5);
+min-height: 100vh;
+	background: rgba(200, 200, 200, 0.5);
+	border: rgba(200, 200, 200, 0.5);
+	justify-content: space-between;
 }
 
-#banniere{
+#banniere {
 	position: fixed;
 	top: 0px;
 	left: 0px;
@@ -68,24 +82,29 @@ body, .form-control{
 	height: 22%;
 }
 
-#flechemenu{
-	position: float;
-	margin-top: 200px;
-	margin-left: 0px;
+
+.flechemenu {
 	height: 20px;
+	aligne-self: flex-end;
+	margin: auto;
+			transform: rotate(180deg);
 }
 
-#logo{
-max-height: 150px;
-margin: 20px;
+
+
+#logo {
+	max-height: 150px;
+	margin: 25px;
 }
+
+
 /* condition for screen size minimum of 500px */
-@media (max-width:1000px) {
-  /* your conditional / responsive CSS inside this condition */
-
-#logo{
-max-height: 75px;
-margin: 10px;
+@media ( max-width :1000px) {
+	/* your conditional / responsive CSS inside this condition */
+	#logo {
+		max-height: 70px;
+		margin: 65px;
+	}
 }
 
-}
+
