modif vues et fichier pom

--- a/GBriceCorp/src/main/webapp/WEB-INF/views/Cons_ValDecou.html
+++ b/GBriceCorp/src/main/webapp/WEB-INF/views/Cons_ValDecou.html
@@ -1,2 +1,2 @@
 
-<title>Module de Validation de demande de Decouvert   Conseiller</title>
+Module de Validation de demande de Decouvert   Conseiller
