--- a/GBriceCorp/src/main/webapp/WEB-INF/views/Cons_ValModif.html
+++ b/GBriceCorp/src/main/webapp/WEB-INF/views/Cons_ValModif.html
@@ -1,1 +1,1 @@
-<title>Module de Validation de modif info perso client   Conseiller</title>
+Module de Validation de modif info perso client   Conseiller
