Implementation html client

--- a/GBriceCorp/src/main/webapp/WEB-INF/views/Client_postConnect.html
+++ b/GBriceCorp/src/main/webapp/WEB-INF/views/Client_postConnect.html
@@ -17,7 +17,7 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr name="liste_comptes" ng-repeat="u in client.comptes">
+							<tr name="liste_comptes" ng-repeat="u in ctrl.comptes">
 								<td><span ng-bind="u.libellé"></span></td>
 								<td><span ng-bind="u.iban"></span></td>
 								<td><span ng-bind="u.solde"></span></td>
