--- a/GBriceCorp/src/main/webapp/static/views/Client_DemDecouvert.html
+++ b/GBriceCorp/src/main/webapp/static/views/Client_DemDecouvert.html
@@ -1,34 +1,18 @@
-<<<<<<< HEAD
+
 <form ng-submit="ctrl.writeDemDecou()">
 <div class="panel panel-info" layout="colomn">
 
-	Quel découvert souhaiteriez vous avoir? (attention ce montant ne peux
-	pas excéder 40% de vos revenus mensuels) <input type="text"
+	Quel dÃ©couvert souhaiteriez vous avoir? (attention ce montant ne peux
+	pas excÃ©der 40% de vos revenus mensuels) <input type="text"
 		ng-model="ctrl.user.decouvert" name="demDecouvert"
 		class="username form-control input-sm"
-		placeholder="Saisir la valeur souhaitée" required />
+		placeholder="Saisir la valeur souhaitÃ©e" required />
 	<div class="row">
 		<div class="form-actions floatRight">
-			<input type="submit" value="Soumettre ma demande à mon conseiller"
+			<input type="submit" value="Soumettre ma demande Ã  mon conseiller"
 				class="btn btn-primary btn-sm">
 		</div>
 
 	</div>
-=======
-<form ng-submit="ctrl.writeDemDecou()">
-<div class="panel panel-info" layout="colomn">
 
-	Quel découvert souhaiteriez vous avoir? (attention ce montant ne peux
-	pas excéder 40% de vos revenus mensuels) <input type="text"
-		ng-model="ctrl.user.decouvert" name="demDecouvert"
-		class="username form-control input-sm"
-		placeholder="Saisir la valeur souhaitée" required />
-	<div class="row">
-		<div class="form-actions floatRight">
-			<input type="submit" value="Soumettre ma demande à mon conseiller"
-				class="btn btn-primary btn-sm">
-		</div>
-
-	</div>
->>>>>>> branch 'master' of https://github.com/tiggrrou/BriceCorp.git
 </form>
