--- a/GBriceCorp/src/main/webapp/static/views/Client_Virement.html
+++ b/GBriceCorp/src/main/webapp/static/views/Client_Virement.html
@@ -1,5 +1,4 @@
-<<<<<<< HEAD
- 
+
 <form ng-submit="ctrl.virement()" class="select.input-group-sm">
 
 <tr ng-repeat="u in ctrl.users">
@@ -11,50 +10,21 @@
 						<td><span ng-bind="u.mail"></span></td>
 
 					</tr>
-	Compte à débiter
-	<SELECT name="Compte à débiter" size="1">
-		<OPTION ng-repeat="u in ctrl.user.comptes"> u.libellé
+	Compte Ã  dÃ©biter
+	<SELECT name="Compte Ã  dÃ©biter" size="1">
+		<OPTION ng-repeat="u in ctrl.user.comptes"> u.libellÃ©
 	</SELECT> 
 
-	Compte à créditer
-	<SELECT name="Compte à débiter" size="1">
-		<OPTION ng-repeat="u in ctrl.user.comptes"> u.libellé
-	</SELECT> 
-	
-	<div class="row">
-		<div class="form-actions floatRight">
-			<input type="submit" value="Soumettre ma demande à mon conseiller"
-				class="btn btn-primary btn-sm">
-		</div>
-	</div>
-=======
- 
-<form ng-submit="ctrl.virement()" class="select.input-group-sm">
-
-<tr ng-repeat="u in ctrl.users">
-						<td><span ng-bind="u.identifiant"></span></td>
-						<td><span ng-bind="u.motDePasse"></span></td>	
-																	<td><span ng-bind="u.typeUser"></span></td>
-						<td><span ng-bind="u.nom"></span></td>
-						<td><span ng-bind="u.adresse"></span></td>
-						<td><span ng-bind="u.mail"></span></td>
-
-					</tr>
-	Compte à débiter
-	<SELECT name="Compte à débiter" size="1">
-		<OPTION ng-repeat="u in ctrl.user.comptes"> u.libellé
-	</SELECT> 
-
-	Compte à créditer
-	<SELECT name="Compte à débiter" size="1">
-		<OPTION ng-repeat="u in ctrl.user.comptes"> u.libellé
+	Compte Ã  crÃ©diter
+	<SELECT name="Compte Ã  dÃ©biter" size="1">
+		<OPTION ng-repeat="u in ctrl.user.comptes"> u.libellÃ©
 	</SELECT> 
 	
 	<div class="row">
 		<div class="form-actions floatRight">
-			<input type="submit" value="Soumettre ma demande à mon conseiller"
+			<input type="submit" value="Soumettre ma demande Ã  mon conseiller"
 				class="btn btn-primary btn-sm">
 		</div>
 	</div>
->>>>>>> branch 'master' of https://github.com/tiggrrou/BriceCorp.git
+
 </form>
