--- a/GBriceCorp/src/main/webapp/static/views/Client_postConnect.html
+++ b/GBriceCorp/src/main/webapp/static/views/Client_postConnect.html
@@ -1,4 +1,4 @@
-<<<<<<< HEAD
+
 	<div class="panel panel-info" layout="colomn">
 
 			<!-- Default panel contents -->
@@ -12,14 +12,14 @@
 					<table class="table table-hover">
 						<thead>
 							<tr>
-								<th>Libellé</th>
+								<th>LibellÃ©</th>
 								<th>Iban</th>
 								<th>Solde</th>
 							</tr>
 						</thead>
 						<tbody>
 							<tr name="liste_comptes" ng-repeat="u in ctrl.comptes">
-								<td><span ng-bind="u.libellé"></span></td>
+								<td><span ng-bind="u.libellÃ©"></span></td>
 								<td><span ng-bind="u.iban"></span></td>
 								<td><span ng-bind="u.solde"></span></td>
 							</tr>
@@ -28,34 +28,4 @@
 				</div>
 			</div>
 		</div>
-=======
-	<div class="panel panel-info" layout="colomn">
 
-			<!-- Default panel contents -->
-			<div class="panel-heading" flex>
-				<span class="lead">Liste des Comptes </span>
-			</div>
-
-
-			<div class="panel-body" flex>
-				<div class="tablecontainer">
-					<table class="table table-hover">
-						<thead>
-							<tr>
-								<th>Libellé</th>
-								<th>Iban</th>
-								<th>Solde</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr name="liste_comptes" ng-repeat="u in ctrl.comptes">
-								<td><span ng-bind="u.libellé"></span></td>
-								<td><span ng-bind="u.iban"></span></td>
-								<td><span ng-bind="u.solde"></span></td>
-							</tr>
-						</tbody>
-					</table>
-				</div>
-			</div>
-		</div>
->>>>>>> branch 'master' of https://github.com/tiggrrou/BriceCorp.git
