--- a/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
@@ -1,11 +1,11 @@
-<<<<<<< HEAD
+
 	<div>
 		<h3> Historique de votre compte  </h3>
 		<tr>
 			<td> Nom : </td>
 			<td> {{client.nom}} </td>
-			<td> Libellé Compte </td>
-			<td> {{compte.libellé}} </td>
+			<td> LibellÃ© Compte </td>
+			<td> {{compte.libellÃ©}} </td>
 		</tr>
 		<tr>
 			<td> Prenom : </td>
@@ -16,7 +16,7 @@
 		<tr>
 			<td> Date de naissance : </td>
 			<td> {{client.dateNaiss}} </td>
-			<td> Découvert autorisé </td>
+			<td> DÃ©couvert autorisÃ© </td>
 			<td> {{compte.decouvert}} </td>
 		</tr>
 		<tr>
@@ -33,7 +33,7 @@
 	<thead>
 		<tr>
 			<th>Date</th>
-			<th>Libellé</th>
+			<th>LibellÃ©</th>
 			<th>Type</th>
 			<th>Montant</th>
 			<th width="20%"></th>
@@ -41,55 +41,8 @@
 	</thead>
 	<tr name="DetailHisto_comptes" ng-repeat="u in client.mouvCompte">
 		<td><span ng-bind="u.date"></span></td>
-		<td><span ng-bind="u.libellé"></span></td>
+		<td><span ng-bind="u.libellÃ©"></span></td>
 		<td><span ng-bind="u.type"></span></td>
 		<td><span ng-bind="u.montant"></span></td>
 	</tr>
-=======
-	<div>
-		<h3> Historique de votre compte  </h3>
-		<tr>
-			<td> Nom : </td>
-			<td> {{client.nom}} </td>
-			<td> Libellé Compte </td>
-			<td> {{compte.libellé}} </td>
-		</tr>
-		<tr>
-			<td> Prenom : </td>
-			<td> {{client.prebom}} </td>
-			<td> Date d'ouverture </td>
-			<td> {{compte.dateOuverture}} </td>
-		</tr>
-		<tr>
-			<td> Date de naissance : </td>
-			<td> {{client.dateNaiss}} </td>
-			<td> Découvert autorisé </td>
-			<td> {{compte.decouvert}} </td>
-		</tr>
-		<tr>
-			<td> Adresse : </td>
-			<td> {{client.adresse}} </td>
-		</tr>
-		<tr>
-			<td> Numero de tel : </td>
-			<td> {{client.telephone}} </td>
-		</tr>
-		
-		
-	</div>
-	<thead>
-		<tr>
-			<th>Date</th>
-			<th>Libellé</th>
-			<th>Type</th>
-			<th>Montant</th>
-			<th width="20%"></th>
-		</tr>
-	</thead>
-	<tr name="DetailHisto_comptes" ng-repeat="u in client.mouvCompte">
-		<td><span ng-bind="u.date"></span></td>
-		<td><span ng-bind="u.libellé"></span></td>
-		<td><span ng-bind="u.type"></span></td>
-		<td><span ng-bind="u.montant"></span></td>
-	</tr>
->>>>>>> branch 'master' of https://github.com/tiggrrou/BriceCorp.git
+
