--- a/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 
 </head>
 <body>
@@ -8,7 +7,7 @@
 			<th>Date</th>
 			<th>Nom</th>
 			<th>Prenom</th>
-			<th>libellé</th>
+			<th>libellÃ©</th>
 			<th width="20%"></th>
 		</tr>
 	</thead>
@@ -16,26 +15,6 @@
 		<td><span ng-bind="u.date"></span></td>
 		<td><span ng-bind="u.nom"></span></td>
 		<td><span ng-bind="u.prenom"></span></td>
-		<td><span ng-bind="u.libellé"></span></td>
+		<td><span ng-bind="u.libellÃ©"></span></td>
 	</tr>
-=======
 
-</head>
-<body>
-	<h1>Demande Clients en attente de traitement</h1>
-		<thead>
-		<tr>
-			<th>Date</th>
-			<th>Nom</th>
-			<th>Prenom</th>
-			<th>libellé</th>
-			<th width="20%"></th>
-		</tr>
-	</thead>
-	<tr name="liste_newAaffect" ng-repeat="u in cons.cliDem">
-		<td><span ng-bind="u.date"></span></td>
-		<td><span ng-bind="u.nom"></span></td>
-		<td><span ng-bind="u.prenom"></span></td>
-		<td><span ng-bind="u.libellé"></span></td>
-	</tr>
->>>>>>> branch 'master' of https://github.com/tiggrrou/BriceCorp.git
