--- a/GBriceCorp/src/main/webapp/static/views/Guest_WebService.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_WebService.html
@@ -1,5 +1,46 @@
 
 
+	<!-- Tableau d'affichage des utilisateurs -->
+
+
+
+	<div class="panel panel-default">
+		<!-- Default panel contents -->
+		<div class="panel-heading">
+			<span class="lead">Liste des utilisateurs </span>
+		</div>
+		<div class="tablecontainer">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>Login</th>
+						<th>MPD</th>	
+																	<th>type</th>
+						<th>Nom</th>
+						<th>Adresse</th>
+						<th>Email</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="u in ctrl.users">
+						<td><span ng-bind="u.identifiant"></span></td>
+						<td><span ng-bind="u.motDePasse"></span></td>	
+																	<td><span ng-bind="u.typeUser"></span></td>
+						<td><span ng-bind="u.nom"></span></td>
+						<td><span ng-bind="u.adresse"></span></td>
+						<td><span ng-bind="u.mail"></span></td>
+
+					</tr>
+				</tbody>
+			</table>
+		</div>
+
+	</div>
+
+
+
+
+
 
 
 
