--- a/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cons_DemCli.html
@@ -1,20 +1,58 @@
 
-</head>
-<body>
-	<h1>Demande Clients en attente de traitement</h1>
-		<thead>
-		<tr>
-			<th>Date</th>
-			<th>Nom</th>
-			<th>Prenom</th>
-			<th>libellé</th>
-			<th width="20%"></th>
-		</tr>
-	</thead>
-	<tr name="liste_newAaffect" ng-repeat="u in cons.cliDem">
-		<td><span ng-bind="u.date"></span></td>
-		<td><span ng-bind="u.nom"></span></td>
-		<td><span ng-bind="u.prenom"></span></td>
-		<td><span ng-bind="u.libellé"></span></td>
-	</tr>
+
+
+
+
+	<div
+	
+	ng-init="Demandes=[
+{Nom:'MoreL',Prenom:'Brice', Adresse:'24 rue Emile blandin 44400 REZE', Type:'Virement', Edition:'true', Attente:'false'},
+{Nom:'dsvsv',Prenom:'dsvsv', Adresse:'24 rue Emile blandin 44400 REZE', Type:'Ouverture', Edition:'false', Attente:'true'},
+{Nom:'MorsdvsveL',Prenom:'sdvdsvdsvdssdvdsvdsvd', Adresse:'24 rue Emile blandin 44400 REZE',Type:'Chequier', Edition:'true', Attente:'false'}
+]"
+	
+	>
+<div class="panel panel-info" layout="colomn">
+
+	<!-- Default panel contents -->
+	<div class="panel-heading" flex>
+		<span class="lead">Demande Clients en attente de traitement </span>
+	</div>	
+	<!-- Tableau d'affichage des demandes d'ouverture -->
+
+
+
+
+
+			<div class="panel-body" flex>
+				<div class="tablecontainer">
+					<table class="table table-hover">
+						<thead>
+							<tr>
+								<th ng-click="trier_par_nom()">Nom</th>
+								<th ng-click="trier_par_prenom()">Prenom</th>
+								<th ng-click="trier_par_Adresse()">Adresse</th>
+								<th ng-click="trier_par_Email()">Type</th>
+								<th  ng-click="trier_par_Action()">Action</th>
+
+							</tr>
+						</thead>
+						<tbody>
+							<tr ng-repeat="demande in Demandes">
+								<td>{{demande.Nom}}</td>
+								<td>{{demande.Prenom}}</td>
+								<td>{{demande.Adresse}}</td>
+								<td>{{demande.Type}}</td>
+
+								<td>
+<img class="langue" src="static/imgs/crayon.png" ng-hide="{{demande.Edition}}" ng-click="" />
+		<img class="langue" src="static/imgs/sablier.png" ng-hide="{{demande.Attente}}" ng-click="" />
+									</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>
+</div>
+</div>
 
