--- a/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
+++ b/GBriceCorp/src/main/webapp/static/views/Admin_AffectCli.html
@@ -1,14 +1,24 @@
-	<h1>Nouveaux Clients en attente d'affectation</h1>
+
+
+	<div
+	
+	ng-init="guests=[
+{Nom:'MoreL',Prenom:'Brice', Adresse:'24 rue Emile blandin 44400 REZE', Email:'brice_morle@hotmail.com'},
+{Nom:'dsvsv',Prenom:'dsvsv', Adresse:'24 rue Emile blandin 44400 REZE', Email:'brice_morle@hotmail.com'},
+{Nom:'MorsdvsveL',Prenom:'sdvdsvdsvdssdvdsvdsvd', Adresse:'24 rue Emile blandin 44400 REZE', Email:'brice_morle@hotmail.com'}
+]"
+	
+	>
+<div class="panel panel-info" layout="colomn">
+
+	<!-- Default panel contents -->
+	<div class="panel-heading" flex>
+		<span class="lead">Nouveaux Clients en attente d'affectation </span>
+	</div>	
 	<!-- Tableau d'affichage des demandes d'ouverture -->
 
 
 
-		<div class="panel panel-info" layout="colomn">
-
-			<!-- Default panel contents -->
-			<div class="panel-heading" flex>
-				<span class="lead">Liste des demandes d'ouverture </span>
-			</div>
 
 
 			<div class="panel-body" flex>
@@ -16,7 +26,6 @@
 					<table class="table table-hover">
 						<thead>
 							<tr>
-								<th>ID.</th>
 								<th ng-click="trier_par_nom()">Nom</th>
 								<th ng-click="trier_par_prenom()">Prenom</th>
 								<th ng-click="trier_par_Adresse()">Adresse</th>
@@ -26,14 +35,14 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr ng-repeat="guest in ctrl.guests">
-								<td><span ng-bind="guest.nom"></span></td>
-								<td><span ng-bind="guest.prenom"></span></td>
-								<td><span ng-bind="guest.address"></span></td>
-								<td><span ng-bind="guest.email"></span></td>
+							<tr ng-repeat="guest in guests">
+								<td>{{guest.Nom}}</td>
+								<td>{{guest.Prenom}}</td>
+								<td>{{guest.Adresse}}</td>
+								<td>{{guest.Email}}</td>
 
 								<td>
-
+<!-- 
 									<div class="formcontainer">
 		<form name="formValidation" class="form-horizontal">
 			<select class="form-control" id="sel1"
@@ -44,9 +53,13 @@
 			</select>
 		</form>
 	</div>	
+	 -->
 									</td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
 			</div>
+</div>
+</div>
+
