--- a/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
@@ -1,48 +1,37 @@
 
-	<div>
-		<h3> Historique de votre compte  </h3>
-		<tr>
-			<td> Nom : </td>
-			<td> {{client.nom}} </td>
-			<td> Libellé Compte </td>
-			<td> {{compte.libellé}} </td>
-		</tr>
-		<tr>
-			<td> Prenom : </td>
-			<td> {{client.prebom}} </td>
-			<td> Date d'ouverture </td>
-			<td> {{compte.dateOuverture}} </td>
-		</tr>
-		<tr>
-			<td> Date de naissance : </td>
-			<td> {{client.dateNaiss}} </td>
-			<td> Découvert autorisé </td>
-			<td> {{compte.decouvert}} </td>
-		</tr>
-		<tr>
-			<td> Adresse : </td>
-			<td> {{client.adresse}} </td>
-		</tr>
-		<tr>
-			<td> Numero de tel : </td>
-			<td> {{client.telephone}} </td>
-		</tr>
-		
-		
+<div
+	ng-init="mouvements=[
+{Libelle:'MoreL',Date:'30/11/2010', Montant:'150'},
+{Libelle:'MoreL',Date:'30/11/2010', Montant:'1590'},
+{Libelle:'MoreL',Date:'30/11/2010', Montant:'15990'},
+{Libelle:'MoreL',Date:'30/11/2010', Montant:'159990'},
+{Libelle:'MoreL',Date:'30/11/2010', Montant:'15999990'}
+]">
+	<div id="printSectionId">
+		<div class="panel panel-default">
+			<!-- Default panel contents -->
+			<div class="panel-heading">
+				<span class="lead">Releve de compte</span>
+			</div>
+			<div class="tablecontainer">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>Libelle</th>
+							<th>Date</th>
+							<th>Montant</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="mouvement in mouvements">
+							<td>{{mouvement.Libelle}}</td>
+							<td>{{mouvement.Date}}</td>
+							<td>{{mouvement.Montant}}</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
 	</div>
-	<thead>
-		<tr>
-			<th>Date</th>
-			<th>Libellé</th>
-			<th>Type</th>
-			<th>Montant</th>
-			<th width="20%"></th>
-		</tr>
-	</thead>
-	<tr name="DetailHisto_comptes" ng-repeat="u in client.mouvCompte">
-		<td><span ng-bind="u.date"></span></td>
-		<td><span ng-bind="u.libellé"></span></td>
-		<td><span ng-bind="u.type"></span></td>
-		<td><span ng-bind="u.montant"></span></td>
-	</tr>
-
+</div>
+<button ng-click="printToCart('printSectionId')" class="button">Imprimer</button>
