--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -37,4 +37,4 @@
 		</div>
 	</div>
 		</div>
-<button ng-click="printToCart('printSectionId')" class="button">Imprimer</button>
+<button ng-click="printToCart('ctrl.printSectionId')" class="button">Imprimer</button>
