--- a/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
+++ b/GBriceCorp/src/main/webapp/static/views/ConsClient_DetailCompte.html
@@ -34,4 +34,4 @@
 		</div>
 	</div>
 </div>
-<button ng-click="printToCart('printSectionId')" class="button">Imprimer</button>
+<button ng-click="ctrl.printToCart('printSectionId')" class="button">Imprimer</button>
