--- a/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
@@ -119,7 +119,44 @@
 						</div>
 					</div>
 				</div>
-	
+
+								<div class="row">
+					<div class="form-group col-md-12">
+						<label class="col-md-2 control-lable" for="file">deposer un fichier</label>
+						<div class="col-md-7">
+							<input type="file" ng-model="ctrl.user.codepostal" name="file"
+								class="form-control input-sm"
+								placeholder="Entez votre codepostal" required />
+							<div class="has-error" ng-show="formInscription.$dirty">
+								<span ng-show="formConnexion.codepostal.$error.required">Champ
+									obligatoire</span>
+							</div>
+						</div>
+					</div>
+				</div>
+
+<script>
+
+var x = document.getElementById("file");
+var txt = "";
+if ('files' in x) {
+    if (x.files.length == 0) {
+        txt = "Select one or more files.";
+    } else {
+        for (var i = 0; i < x.files.length; i++) {
+            txt += "<br><strong>" + (i+1) + ". file</strong><br>";
+            var file = x.files[i];
+            if ('name' in file) {
+                txt += "name: " + file.name + "<br>";
+            }
+            if ('size' in file) {
+                txt += "size: " + file.size + " bytes <br>";
+            }
+        }
+    }
+}
+document.getElementById ("demo").innerHTML = txt;
+</script>
 				<div class="row">
 					<div class="form-actions floatRight">
 						<input type="submit" value="Connexion"
