--- a/GBriceCorp/src/main/webapp/static/views/Guest_WebService.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_WebService.html
@@ -1,2 +1,7 @@
 
 
+				<div flex>
+				<a href="#/inscription" class="btn btn-success btn-lg" >
+						<h4 class="list-group-item-heading">Inscription</h4>
+				</a>
+				</div>
