modifs mineures (ajout ; retrait de lignes etc ..)

--- a/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
+++ b/GBriceCorp/src/main/webapp/static/views/Cli_ListeComptes.html
@@ -1,5 +1,4 @@
-<div
-	ng-init="ctrl.getComptes();">
+<div ng-init="ctrl.getComptes();">
 <div id="printSectionId">
 	<div class="panel panel-info" layout="colomn">
 
