--- a/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
+++ b/GBriceCorp/src/main/webapp/static/views/Guest_Inscription.html
@@ -11,19 +11,20 @@
 		<span class="lead">Demande d'ouverture d'un compte courant</span>
 	</div>
 
-
+<!-- action="envoiMailConfirmation.php"-->
 	<div class="panel-body" flex>
 		<div class="formcontainer">
-			<form ng-submit="ctrl.inscription()" name="formIscription"
-				class="form-horizontal" action="envoiMailConfirmation.php" method="post">
+			<form ng-submit="ctrl.submit()" name="formIscription"
+				class="form-horizontal" 
+				method="post">
 				<input type="hidden" ng-model="ctrl.user.id" />
 				<div class="row">
 					<div class="form-group col-md-12">
 						<label class="col-md-2 control-lable" for="file">Prenom</label>
 						<div class="col-md-7">
 							<input type="text" ng-model="ctrl.user.prenom" name="prenom"
-								class="form-control input-sm"
-								placeholder="Entez votre prenom" required />
+								class="form-control input-sm" placeholder="Entez votre prenom"
+								required />
 							<div class="has-error" ng-show="formInscription.$dirty">
 								<span ng-show="formConnexion.prenom.$error.required">Champ
 									obligatoire</span>
@@ -35,9 +36,9 @@
 					<div class="form-group col-md-12">
 						<label class="col-md-2 control-lable" for="file">Nom</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.user.nom"
-								name="nom" class="form-control input-sm"
-								placeholder="Entrez votre prenom" required />
+							<input type="text" ng-model="ctrl.user.nom" name="nom"
+								class="form-control input-sm" placeholder="Entrez votre prenom"
+								required />
 							<div class="has-error" ng-show="formInscription.$dirty">
 								<span ng-show="formConnexion.nom.$error.required">Champ
 									obligatoire</span>
@@ -61,11 +62,12 @@
 				</div>
 				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Adresse mail</label>
+						<label class="col-md-2 control-lable" for="file">Adresse
+							mail</label>
 						<div class="col-md-7">
-							<input type="email" ng-model="ctrl.user.email"
-								name="email" class="form-control input-sm"
-								placeholder="Entrez votre email" required />
+							<input type="email" ng-model="ctrl.user.mail" name="mail"
+								class="form-control input-sm" placeholder="Entrez votre email"
+								required />
 							<div class="has-error" ng-show="formInscription.$dirty">
 								<span ng-show="formConnexion.email.$error.required">Champ
 									obligatoire</span>
@@ -73,31 +75,16 @@
 						</div>
 					</div>
 				</div>
-				
-				
-				
-				
-								<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Confirmez votre mail</label>
-						<div class="col-md-7">
-							<input type="email" ng-model="ctrl.user.prenom" name="conf_mail"
-								class="form-control input-sm"
-								placeholder="confirmation" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.conf_mail.$error.required">Champ
-									obligatoire</span>
-							</div>
-						</div>
-					</div>
-				</div>
+
+
 				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Adresse postale</label>
+						<label class="col-md-2 control-lable" for="file">Adresse
+							postale</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.user.adresse"
-								name="adresse" class="form-control input-sm"
-								placeholder="Entrez votre adresse" required />
+							<input type="text" ng-model="ctrl.user.adresse" name="adresse"
+								class="form-control input-sm" placeholder="Entrez votre adresse"
+								required />
 							<div class="has-error" ng-show="formInscription.$dirty">
 								<span ng-show="formConnexion.adresse.$error.required">Champ
 									obligatoire</span>
@@ -105,12 +92,13 @@
 						</div>
 					</div>
 				</div>
-								<div class="row">
+				<div class="row">
 					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">Code Postal</label>
+						<label class="col-md-2 control-lable" for="file">Code
+							Postal</label>
 						<div class="col-md-7">
-							<input type="text" ng-model="ctrl.user.codepostal" name="codepostal"
-								class="form-control input-sm"
+							<input type="text" ng-model="ctrl.user.codepostal"
+								name="codepostal" class="form-control input-sm"
 								placeholder="Entez votre codepostal" required />
 							<div class="has-error" ng-show="formInscription.$dirty">
 								<span ng-show="formConnexion.codepostal.$error.required">Champ
@@ -120,43 +108,7 @@
 					</div>
 				</div>
 
-								<div class="row">
-					<div class="form-group col-md-12">
-						<label class="col-md-2 control-lable" for="file">deposer un fichier</label>
-						<div class="col-md-7">
-							<input type="file" ng-model="ctrl.user.codepostal" name="file"
-								class="form-control input-sm"
-								placeholder="Entez votre codepostal" required />
-							<div class="has-error" ng-show="formInscription.$dirty">
-								<span ng-show="formConnexion.codepostal.$error.required">Champ
-									obligatoire</span>
-							</div>
-						</div>
-					</div>
-				</div>
 
-<script>
-
-var x = document.getElementById("file");
-var txt = "";
-if ('files' in x) {
-    if (x.files.length == 0) {
-        txt = "Select one or more files.";
-    } else {
-        for (var i = 0; i < x.files.length; i++) {
-            txt += "<br><strong>" + (i+1) + ". file</strong><br>";
-            var file = x.files[i];
-            if ('name' in file) {
-                txt += "name: " + file.name + "<br>";
-            }
-            if ('size' in file) {
-                txt += "size: " + file.size + " bytes <br>";
-            }
-        }
-    }
-}
-document.getElementById ("demo").innerHTML = txt;
-</script>
 				<div class="row">
 					<div class="form-actions floatRight">
 						<input type="submit" value="Connexion"
@@ -168,3 +120,40 @@ document.getElementById ("demo").innerHTML = txt;
 		</div>
 	</div>
 </div>
+	<div class="panel panel-default">
+			<!-- Default panel contents -->
+			<div class="panel-heading">
+				<span class="lead">Liste des utilisateurs </span>
+			</div>
+			<div class="tablecontainer">
+				<table class="table table-hover">
+					<thead>
+						<tr>
+							<th>ID.</th>
+							<th>Prenom</th>							
+							<th>Nom</th>
+							<th>Adresse</th>
+							<th>Codepostal</th>							
+							<th>Email</th>
+							<th width="20%"></th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr ng-repeat="u in ctrl.users">
+							<td><span ng-bind="u.id"></span></td>
+							<td><span ng-bind="u.prenom"></span></td>
+							<td><span ng-bind="u.nom"></span></td>							
+							<td><span ng-bind="u.adresse"></span></td>
+							<td><span ng-bind="u.codepostal"></span></td>							
+							<td><span ng-bind="u.mail"></span></td>
+							<td>
+								<button type="button" ng-click="ctrl.edit(u.id)"
+									class="btn btn-success custom-width">Modifier</button>
+								<button type="button" ng-click="ctrl.remove(u.id)"
+									class="btn btn-danger custom-width">Supprimer</button>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
